--- a/web/admin/assets/css/style.css
+++ b/web/admin/assets/css/style.css
@@ -14,6 +14,16 @@ body {
     border-radius: 8px !important;
 }
 
+#header .container-fluid ul li a:hover {
+    background-color: lightblue;
+    border-radius: 0.25em;
+}
+
+#header .container-fluid ul li a:active {
+    background-color: lightblue;
+    border-radius: 0.25em;
+}
+
 #content {
     margin: 5%;
     /* padding-top: 5%; */
