--- a/web/assets/css/css-main.css
+++ b/web/assets/css/css-main.css
@@ -40,3 +40,7 @@ hr.h-color{
     align-items: center;
     justify-content: center;
 }
+
+.card{
+/*    border-radius: 15px; overflow: hidden;*/
+}
