--- a/web/admin/assets/css/style.css
+++ b/web/admin/assets/css/style.css
@@ -25,12 +25,12 @@ body {
 }
 
 #content {
-    margin: 5%;
+    margin: 2%;
     /*padding-top: 5%;*/ 
 }
 
 #content .table {
-    margin-top: 1.5%;
+    /*margin-top: 1% !important;*/
 }
 
 #content .table>:not(caption)>*>* {
